# libsim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  TODO.md
docs/: DOMAIN.md  README.md
docs/decisions/: 001-host-classes-and-uring.md
docs/guides/: fuzz-policy.md
fuzz/: fuzz_sim_a.c  fuzz_sim_bc.c
include/: sim.h  sim_clock.h  sim_fuzz.h  sim_net.h  sim_timer.h  sim_uring.h
src/: sim_clock.c  sim_fuzz.c  sim_net.c  sim_timer.c  sim_uring.c
tests/: test_sim_clock_timer.c  test_sim_fuzz.c  test_sim_net.c  test_sim_uring.c
